# murphy

./: .gitignore  digest.txt  frames_2026-02-25_00.34.41.gv  run.sh
install/: local_setup.sh  setup.sh
install/murphy_description/share/murphy_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/murphy_description/share/murphy_description/cmake/: murphy_descriptionConfig-version.cmake  murphy_descriptionConfig.cmake
log/: latest_build
src/murphy_bringup/: CMakeLists.txt  package.xml
src/murphy_bringup/launch/: feelers.launch.xml
src/murphy_description/: CMakeLists.txt  package.xml
src/murphy_description/config/: ekf.yaml  slam.yaml
src/murphy_description/launch/: spawn.launch.py
src/murphy_description/urdf/: murphy.urdf.xacro
src/murphy_description/worlds/: murphy.world
src/murphy_feelers/: CMakeLists.txt  package.xml
src/murphy_feelers/src/: feeler_node.cpp
src/murphy_feelers_core/: CMakeLists.txt  package.xml
src/murphy_feelers_core/include/murphy_feelers_core/: feeler.hpp
src/murphy_feelers_core/src/: feeler.cpp
src/murphy_lidar_mask/: package.xml  setup.cfg  setup.py
src/murphy_lidar_mask/murphy_lidar_mask/: scan_to_mask.py
src/murphy_mask_fusion/: package.xml  setup.cfg  setup.py
src/murphy_mask_fusion/murphy_mask_fusion/: fuse_masks.py
src/murphy_vision_rs/: package.xml  setup.cfg  setup.py
src/murphy_vision_rs/murphy_vision_rs/: depth_to_mask.py  pc_to_mask.py
(+8 files in other folders)
